<?xml version="1.0" ?>

<package format="2">
  <name>detect_unstable_object</name>
  <version>1.0.0</version>
  <description>The 'detect_unstable_object' package provides recognition for detecting unstable objects about to fall.</description>

  <maintainer email="tfukui@i.ci.ritsumei.ac.jp">Takaaki Fukui</maintainer>
  <license>MIT</license>
  <url type="website">http://www.i.ci.ritsumei.ac.jp/wp/en/</url>
  <author email="tfukui@i.ci.ritsumei.ac.jp">Takaaki Fukui</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>actionlib_msgs</depend>

</package>
